Closed
Bug 801566
Opened 13 years ago
Closed 13 years ago
Build fails if debug is disabled but dump-painting is enabled
Categories
(Core :: Layout, defect)
Core
Layout
Tracking
()
RESOLVED
FIXED
mozilla19
People
(Reporter: cwiiis, Assigned: cwiiis)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
995 bytes,
patch
|
mattwoodrow
:
review+
|
Details | Diff | Splinter Review |
As titled, if you specify --disable-debug and --enable-dump-painting in your mozconfig, the build will fail with:
layout/base/FrameLayerBuilder.cpp: In function 'void mozilla::PaintInactiveLayer(nsDisplayListBuilder*, mozilla::layers::LayerManager*, nsDisplayItem*, gfxContext*, nsRenderingContext*)':
layout/base/FrameLayerBuilder.cpp:1947: error: 'AppUnitsPerDevPixel' was not declared in this scope
| Assignee | ||
Comment 1•13 years ago
|
||
Attachment #671360 -
Flags: review?(matt.woodrow)
| Assignee | ||
Comment 2•13 years ago
|
||
This is a regression caused by bug 799407.
Blocks: 799407
Keywords: regression
Updated•13 years ago
|
Attachment #671360 -
Flags: review?(matt.woodrow) → review+
| Assignee | ||
Comment 3•13 years ago
|
||
Pushed to inbound: https://hg.mozilla.org/integration/mozilla-inbound/rev/f4b63574e768
Comment 4•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla19
You need to log in
before you can comment on or make changes to this bug.
Description
•