Bug 801566 - Fix building with --disable-debug and --enable-dump-painting. r=mattwoodrow

Change #ifdef DEBUG to MOZ_DUMP_PAINTING for function AppUnitsPerDevPixel.